--- a/3_position/style.css
+++ b/3_position/style.css
@@ -8,9 +8,28 @@ div {
     color: white;
     /* border-radius: 0.5em; */
     /* font-size: 1.2rem; */
-    text-align: center;
+    /* text-align: center; */
 
 }
+
+.card {
+    margin: 10vh;
+    width: 400px;
+    height: 300px;
+    background: goldenrod;
+    position: relative;
+}
+
+.text {
+    position: absolute;
+    width: fit-content;
+    padding: 1em;
+    border: 2px dotted black;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    }
 
 body {
     border: 2px solid black;
@@ -31,16 +50,16 @@ nav {
     width: 100px;
     height: 100px;
     background: blue;
-    line-height: 100px; 
+    line-height: 100px;
 }
 
 .box2 {
-    position: absolute;  
+    position: absolute;
     top: 4px;
     right: 4px;
     /* z-index: -1; */
     background: green;
-     line-height: 30px; 
+    line-height: 30px;
 }
 
 .action_button {
