--- a/5_grid/style.css
+++ b/5_grid/style.css
@@ -10,7 +10,7 @@
     /* grid-template: 50px 200px 100px /  1fr 2fr; */
 
     /* grid-template-rows: 50px 200px 100px; */
-    /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns: 1fr 1fr;
 
     /* grid-template-columns:repeat(auto-fill, minmax(100px, 1fr)); */
 
@@ -22,21 +22,32 @@
     row-gap: 1em; */
     gap: 0.6em;
 
+    justify-items: center;    
+     /* justify-content: space-around; */
+    /* align-items: stretch; */
+    width: 40em;
+    height: 80vh;
+    border: 2px solid red;
+
+
+
     div {
         border: 2px solid green;
-        min-height: 7em;
+        min-height: 4em;
+        width: 4em;
     }
 }
 
 .box1 {
     background: rgb(237, 237, 9);
     border: 2px solid red;
+    font-size: 3rem;
     /* grid-area: head; */
 
     /* grid-column-start: 1;
     grid-column-end: 4; */
 
-    grid-column: 1 / span 3;
+    /* grid-column: 1 / span 3; */
 }
 
 .box2 {
@@ -48,7 +59,7 @@
 
     /* grid-row: 2/4; */
 
-    grid-row: 2 / span 2;
+    /* grid-row: 2 / span 2; */
 
     /* grid-area: sidebar; */
 }
@@ -63,10 +74,12 @@
 .box4 {
     background: pink;
     /* grid-area: foot; */
+    justify-self: start;
 }
 
 .box5 {
     /* grid-area: foot2; */
-    grid-row-start: 3;
-    grid-row-end: 5;
+    /* grid-row-start: 3;
+    grid-row-end: 5; */
+    align-self: end;
 }
