--- a/6_responsive/style.css
+++ b/6_responsive/style.css
@@ -28,3 +28,27 @@ section {
     font-size: clamp(1rem,2.5vw,1.8rem);
     margin: 2em 4em;
 }
+
+.container {
+    margin: 1em 2em;
+}
+
+.card {
+    border: 2px solid black;
+    max-width: 20em;
+}
+
+.card h1 {
+    font-size: 1.2rem;
+    padding: 0.5em;
+    text-align: center;
+    text-shadow: 2px 2px 2px rgb(213, 156, 41);
+}
+
+.card img {
+    width: 100%;
+}
+
+.card div {
+    padding: 0.5em 1em;
+}
