--- a/6_responsive/style.css
+++ b/6_responsive/style.css
@@ -30,12 +30,18 @@ section {
 }
 
 .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1em;
     margin: 1em 2em;
+    border: 2px solid green;   
 }
 
 .card {
     border: 2px solid black;
-    max-width: 20em;
+    max-width: 18em;
+    border-radius: 1em; 
 }
 
 .card h1 {
