--- a/6_responsive/style.css
+++ b/6_responsive/style.css
@@ -5,6 +5,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.box {
+    width: 100px;
+    height: 100px;
+    background: red;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -70,4 +76,17 @@ section {
 
 .card div {
     padding: 0.5em 1em;
+}
+
+footer {
+    text-align: center;
+    font-weight: 600;
+    padding: 1em;
+}
+
+
+@media only screen and (min-width: 600px) {
+  .box {
+    background-color: lightblue;
+  }
 }
