--- a/6_responsive/style.css
+++ b/6_responsive/style.css
@@ -5,12 +5,6 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.box {
-    width: 100px;
-    height: 100px;
-    background: red;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -22,13 +16,22 @@ nav {
 }
 
 .right {
-    font-size: 1.2rem;
-    font-weight: 600;
+    display: none;
 }
 
-.right span {
+.hamburger {
+    margin-top: 0.5em;
     margin-right: 1em;
 }
+
+.line {
+    width: 2.5em;
+    height: 4px;
+    background: black;
+    margin-bottom: 6px;
+    border-radius: 2px;
+}
+
 
 section {
     font-size: clamp(1rem, 2.5vw, 1.8rem);
@@ -48,8 +51,8 @@ section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
     justify-content: center;
-    gap: 1em; 
-    margin: 1em 2em; 
+    gap: 1em;
+    margin: 1em 2em;
 }
 
 .card {
@@ -60,7 +63,7 @@ section {
 }
 
 .card:hover {
-       box-shadow: 2px 2px 2px rgb(234, 137, 18);
+    box-shadow: 2px 2px 2px rgb(234, 137, 18);
 }
 
 .card h1 {
@@ -86,7 +89,17 @@ footer {
 
 
 @media only screen and (min-width: 600px) {
-  .box {
-    background-color: lightblue;
-  }
+    .hamburger {
+        display: none;
+    }
+ 
+    .right {
+        display: block;
+        font-size: 1.2rem;
+        font-weight: 600;
+    }
+
+    .right span {
+        margin-right: 1em;
+    }
 }
